--- a/default.html
+++ b/default.html
@@ -1,6 +1,8 @@
-<body>
-    <div id="boom">BOOM!!!!!!</div>
-    <div id="ship">
-        <div id="gun"></div>
-    </div>
-</body>
+<html>
+    <body>
+        <div id="boom">BOOM!!!!!!</div>
+        <div id="ship">
+            <div id="gun"></div>
+        </div>
+    </body>
+</html>
