--- a/default.html
+++ b/default.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="default.css" media="screen" />
+        <script type="text/javascript" src="default.js"></script>
+    </head>
     <body>
         <div id="boom">BOOM!!!!!!</div>
         <div id="ship">
